# icon-viewer

./: Cargo.toml  LICENSE  README.md  build.rs  meson.build
.github/workflows/: rust.yml
data/: resources.gresource.xml
data/css/: application.css
data/ui/: icon_cell.ui  icon_details.ui  icon_selector.ui  icon_selector_filters.ui  window.ui
icon-viewer/: .gitignore  Cargo.toml  build.rs
icon-viewer/data/: resources.gresource.xml
icon-viewer/data/css/: application.css
icon-viewer/data/ui/: icon_details.ui  icon_selector.ui  icon_selector_filters.ui  window.ui
icon-viewer/src/: filter_widget.rs  lib.rs  main.rs  selector.rs
icon-viewer/src/app/: mod.rs
icon-viewer/src/icon/: cell.rs  data.rs  mod.rs
resources/: NettIconViewer.desktop  nett-icon-viewer.desktop
src/: category.rs  data_row.rs  details.rs  filter_widget.rs  icon.rs  lib.rs  main.rs  meson.build  selector.rs
src/app/: icon.rs  icon_cell.rs  icon_details.rs  mod.rs  window.rs
src/icon/: cell.rs  data.rs
tools/: Cargo.toml
tools/src/: main.rs
